2010-06-06  Chun-Yu Lee (Mat) <matlinuxer2@gmail.com>

	* Quote the font interfaces and implementations from FbTerm, 
	  to add fontconfig support for ucimf.

2009-03-24  Mat <MatLinuxer2@gmail.com>

	* Revision to 0.2.4
	* Fixed Ctrl-Space error while vim and nano editing

2009-02-26  Mat <MatLinuxer2@gmail.com>

	* Revision to 0.2.3
	* Log message to file .ucimf-log

2009-01-29  Mat <MatLinuxer2@gmail.com>

	* Initial Revision 0.2.0
