@@ -4,11 +4,11 @@
 #include "imapi.h"
 #include "ucimf.h"
 #include "imf/widget.h"
-#include "debug.h"
+//#include "debug.h"
 
 static char raw_mode = 1;
 static char first_show = 1;
-int LogFd=-1;
+//int LogFd=-1;
 
 static void im_active()
 {
@@ -16,7 +16,7 @@ static void im_active()
 		extern void init_keycode_state();
 		init_keycode_state();
 	}
-	UrDEBUG("im active\n");
+	//UrDEBUG("im active\n");
 
 	/* patch */
 	int buf_len = 5;
@@ -49,8 +49,8 @@ static void im_deactive()
 	ucimf_switch(  buf, &buf_len );                                       
 	/* patch */
 
-	UrDEBUG("im deactive\n");
-	set_im_windows(0, 0);
+	//UrDEBUG("im deactive\n");
+	//set_im_windows(0, 0);
 	first_show = 1;
 }
 
@@ -67,18 +67,18 @@ static void process_raw_key(char *buf, int len)
     else
     {
 	    unsigned short result_len = len;
-	    UrDEBUG("ucimf: return text, '%s', length:%d \n", result, len );
+	    //UrDEBUG("ucimf: return text, '%s', length:%d \n", result, len );
 	    put_im_text( result, result_len );
     }
 
 }
 
-static void process_key(char *keys, unsigned short len)
+static void process_key(char *keys, unsigned len)
 {
 	if (raw_mode) {
 		process_raw_key(keys, len);
 	} else {
-		UrDEBUG("getkey, (%c, 0x%x)\n", *keys, *keys);
+		//UrDEBUG("getkey, (%c, 0x%x)\n", *keys, *keys);
 
 		/* patch */
 		int buf_len=len;
@@ -99,7 +99,7 @@ static void process_key(char *keys, unsigned short len)
 
 static void cursor_pos_changed(unsigned x, unsigned y)
 {
-	UrDEBUG("cursor, %d, %d\n", x, y);
+	//UrDEBUG("cursor, %d, %d\n", x, y);
 
 	ucimf_cursor_position( x, y);
 }
@@ -125,6 +125,6 @@ int main()
 	connect_fbterm(raw_mode);
 	while (check_im_message()) ;
 
-	UrDEBUG("im exit normally\n");
+	//UrDEBUG("im exit normally\n");
 	return 0;
 }
